@@ -36,7 +36,7 @@ module Thoth; module Plugin
   # Del.icio.us plugin for Thoth.
   module Delicious
     FEED_URL = 'http://feeds.delicious.com/feeds/json'
-    
+
     Configuration.for("thoth_#{Thoth.trait[:mode]}") do
       delicious {
 
@@ -45,15 +45,15 @@ module Thoth; module Plugin
         # pounding on del.icio.us's servers. Default is 900 seconds (15
         # minutes).
         cache_ttl 900 unless Send('respond_to?', :cache_ttl)
-        
+
         # Request timeout in seconds.
         request_timeout 5 unless Send('respond_to?', :request_timeout)
 
       }
     end
-    
+
     class << self
-      
+
       # Gets recent del.icio.us bookmarks for the specified _username_. The
       # return value of this method is cached to improve performance and to
       # avoid pounding del.icio.us with excess traffic.
@@ -64,27 +64,26 @@ module Thoth; module Plugin
       #                   specified tags will be returned.
       #
       def recent_bookmarks(username, options = {})
-        @cache ||= {}
-        
+        cache   = Ramaze::Cache.value_cache
         options = {:count => 5}.merge(options)
-        request = "#{FEED_URL}/#{::CGI.escape(username)}" +
-            (options[:tags] ? '/' + ::CGI.escape(options[:tags].join(' ')) : '') +
+        request = "#{FEED_URL}/#{::CGI.escape(username)}" <<
+            (options[:tags] ? '/' << ::CGI.escape(options[:tags].join(' ')) : '') <<
             "?raw&count=#{options[:count]}"
-        
-        if cached = @cache[request]
-          return cached[:value] if cached[:expires] > Time.now
+
+        if value = cache[request]
+          return value
         end
-        
-        r = []
+
+        response = []
 
         Timeout.timeout(Config.delicious.request_timeout, StandardError) do
-          r = JSON.parse(open(request).read)
+          response = JSON.parse(open(request).read)
         end
-        
+
         # Parse the response into a more friendly format.
         data = []
-        
-        r.each do |item|
+
+        response.each do |item|
           data << {
             :url  => item['u'],
             :desc => item['d'],
@@ -93,18 +92,13 @@ module Thoth; module Plugin
           }
         end
 
-        @cache[request] = {
-          :expires => Time.now + Config.delicious.cache_ttl,
-          :value   => data
-        }
-        
-        return data
+        return cache.store(request, data, :ttl => Config.delicious.cache_ttl)
 
       rescue => e
         return []
       end
-      
+
     end
   end
-  
+
 end; end
